<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_gravity="center"
        android:textSize="@dimen/tamaño_titulo"
        android:textStyle="italic" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/titulo">

    
    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/nombre"/>


    <EditText
        android:id="@+id/editNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/nacimiento"/>

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/telefono"/>


     <EditText
         android:id="@+id/editEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/espacio_top"
         android:hint="@string/email"/>

      <EditText
          android:id="@+id/editDescripcion"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/espacio_top"
          android:hint="@string/descripcion"/>
       <Button
           android:id="@+id/btnAceptar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/btn_Aceptar"
           android:layout_marginTop="@dimen/espacio_top"/>

    </LinearLayout>


</RelativeLayout>