<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosMostrar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="@dimen/tamaño_titulo"
        android:textStyle="italic"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tVNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/tamaño_letra_formua"
        android:layout_marginTop="@dimen/espacio_top"/>

    <TextView
        android:id="@+id/tVNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacimiento"
        android:textSize="@dimen/tamaño_letra_formua"
        android:layout_marginTop="@dimen/espacio_top"/>
    <TextView
        android:id="@+id/tVTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="@dimen/tamaño_letra_formua"
        android:layout_marginTop="@dimen/espacio_top"/>
    <TextView
        android:id="@+id/tVMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/tamaño_letra_formua"
        android:layout_marginTop="@dimen/espacio_top"/>
    <TextView
        android:id="@+id/tVDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="@dimen/tamaño_letra_formua"
        android:layout_marginTop="@dimen/espacio_top"/>
    
    <Button
        android:id="@+id/btnEditardatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/boton_dos"/>


</LinearLayout>